# netwatch-terminal

./: .gitignore  App-ai-patch.md  MANUAL.md  README (2).md  README.md  SETUP.md  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/commands/: custom.js
frontend/components/: Dashboard.jsx  StatusBar.jsx  Terminal.jsx  TitleBar.jsx
frontend/src/: App.jsx
frontend/src/commands/: nw-commands.js
frontend/src/components/: AIPanel.jsx  Dashboard.jsx  InfraPanel.jsx  MetricsPanel.jsx  SidePanel.jsx  StatusBar.jsx  Terminal.jsx  Terminal2.jsx  TitleBar.jsx
frontend/src/styles/: theme5.css  themes.css  themes3.css  themes4.css
frontend/styles/: themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sidecar/: package-lock.json  package.json  pty-server.js
src-tauri/src/: commands.rs  main.rs
